--- a/dynamic_conf.yml
+++ b/dynamic_conf.yml
@@ -17,7 +17,7 @@ http:
           interval: 3s
           timeout: 3s
         servers:
-        - url: "http://defi-whale:3000"
+        - url: "http://pond-whale:3000"
     backup:
       loadBalancer:
         servers:
