--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - ocean
 
   pond-node:
-    image: defi/defichain:2.8.0
+    image: defi/defichain:2.8.1
     container_name: pond-node
     restart: always
     volumes:
@@ -41,7 +41,8 @@ services:
       - ocean
 
   pond-whale:
-    image: ghcr.io/jellyfishsdk/whale-api:2.45.6
+    # Temporary fix for https://github.com/JellyfishSDK/jellyfish/issues/1532
+    image: ghcr.io/jellyfishsdk/whale-api:88972089d0e439aee173fde0a7fd7cc918c1da79
     container_name: pond-whale
     restart: always
     volumes:
